# glia-visual-vocabulary-mcp

./: glia_visual_vocabulary_mcp.py  pyproject.toml
morphospace/: coordinates.py  trajectory.py
synthesis/: prompt_builder.py
taxonomy/: glia_types.py  visual_translations.py
